--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="#">Home</a>
       <a href="#projects">Projects</a>
       <a href="#certificates">Certificates</a>
-      <a href="CV.pdf" download>Download CV</a>
+      <a href="CV(Jalil).pdf" download>Download CV</a>
     </nav>
   </header>
   <div class="hero">
