--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
     <div class="certificate">
       <img src="Cert1.jpeg" alt="Certificate 1" width="150" />
       <a href="https://coursera.org/share/ba192ce789401fc4b07c229f86978a12">
-        <h3>Introduction to Frontend</h3>
+        <h3>Intro to Frontend</h3>
 
       </a>
     </div>
     <div class="certificate">
       <img src="Cert2.jpeg" alt="Certificate 2" width="150" />
       <a href="https://coursera.org/share/fd6c06675c479d487d65f45c3efd4985">
-        <h3>Programming with Javascript</h3>
+        <h3>Javascript</h3>
 
       </a>
     </div>
@@ -91,3 +91,4 @@
   </footer>
 </body>
 </html>
+
