--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="project">
         <a href="https://danjummah23.github.io/Ecommerse/#">
           <h3>Jewellery Store</h3>
-          <p>This is my first larger.</p>
+          <p>This is my first public html and css project.</p>
         </a>
       </div>
       <div class="project">
