--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Portfolio</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" />
-  <link rel="stylesheet" href="Jalil.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/5.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <header>
@@ -22,7 +21,7 @@
   <div class="hero">
     <div class="hero-content">
       <h1>Abdul-Jalil Agouda</h1>
-      <img src="Jelil.jpg" alt="Picture of Me!" class="profile-pic" width="200">
+      <img src="images/Jelil.jpg" alt="Picture of Me!" class="profile-pic" width="200">
       <p>Take a look at my latest projects!</p>
     </div>
   </div>
@@ -32,7 +31,7 @@
       <div class="project">
         <a href="https://danjummah23.github.io/Ecommerse/#">
           <h3>Jewellery Store</h3>
-          <p>This is my public html and css project.</p>
+          <p>This is my public HTML and CSS project.</p>
         </a>
       </div>
       <div class="project">
@@ -51,66 +50,42 @@
   </div>
   <div class="certificates" id="certificates">
     <h2 class="section-heading">Certificates</h2>
-    <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="Cert1.jpeg" class="d-block w-100" alt="Certificate 1" />
-          <div class="carousel-caption">
-            <a href="https://coursera.org/share/ba192ce789401fc4b07c229f86978a12">
-              <h3>Intro to Frontend</h3>
-            </a>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="Cert2.jpeg" class="d-block w-100" alt="Certificate 2" />
-          <div class="carousel-caption">
-            <a href="https://coursera.org/share/fd6c06675c479d487d65f45c3efd4985">
-              <h3>Javascript</h3>
-            </a>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="Cert3.jpeg" class="d-block w-100" alt="Certificate 3" />
-          <div class="carousel-caption">
-            <a href="https://coursera.org/share/802a902dca37cb8b1626cfe79c170f23">
-              <h3>Advanced React</h3>
-            </a>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="Cert5.jpeg" class="d-block w-100" alt="Certificate 4" />
-          <div class="carousel-caption">
-            <a href="https://coursera.org/share/dc1f5c6e07039c90bb13606ce929b47c">
-              <h3>UX/UI Principles</h3>
-            </a>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="Cert4.jpeg" class="d-block w-100" alt="Certificate 5" />
-          <div class="carousel-caption">
-            <a href="https://coursera.org/share/1eb64773582830143f4747c30bcccd4d">
-              <h3>Version Control</h3>
-            </a>
-          </div>
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
+    <div class="certificate">
+      <img src="images/Cert1.jpeg" class="d-block w-100" alt="Certificate 1" />
+      <a href="https://coursera.org/share/ba192ce789401fc4b07c229f86978a12">
+        <h3>Intro to Frontend</h3>
+      </a>
+    </div>
+    <div class="certificate">
+      <img src="images/Cert2.jpeg" class="d-block w-100" alt="Certificate 2" />
+      <a href="https://coursera.org/share/fd6c06675c479d487d65f45c3efd4985">
+        <h3>Javascript</h3>
+      </a>
+    </div>
+    <div class="certificate">
+      <img src="images/Cert3.jpeg" class="d-block w-100" alt="Certificate 3" />
+      <a href="https://coursera.org/share/802a902dca37cb8b1626cfe79c170f23">
+        <h3>Advanced React</h3>
+      </a>
+    </div>
+    <div class="certificate">
+      <img src="images/Cert5.jpeg" class="d-block w-100" alt="Certificate 4" />
+      <a href="https://coursera.org/share/dc1f5c6e07039c90bb13606ce929b47c">
+        <h3>UX/UI Principles</h3>
+      </a>
+    </div>
+    <div class="certificate">
+      <img src="images/Cert4.jpeg" class="d-block w-100" alt="Certificate 5" />
+      <a href="https://coursera.org/share/1eb64773582830143f4747c30bcccd4d">
+        <h3>Version Control</h3>
+      </a>
     </div>
   </div>
 
   <footer>
     <p>&copy; 2023 Abdul-Jalil. All rights reserved.</p>
   </footer>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/5.0.0/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
