--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Portfolio</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" />
-  <link rel="stylesheet" href="Jalil.css">
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <header>
@@ -51,31 +51,31 @@
   <div class="certificates" id="certificates">
     <h2 class="section-heading">Certificates</h2>
     <div class="certificate">
-      <img src="Cert1.jpeg" class="d-block w-100" alt="Certificate 1" />
+      <img src="Cert1.jpeg" alt="Certificate 1" />
       <a href="https://coursera.org/share/ba192ce789401fc4b07c229f86978a12">
         <h3>Intro to Frontend</h3>
       </a>
     </div>
     <div class="certificate">
-      <img src="Cert2.jpeg" class="d-block w-100" alt="Certificate 2" />
+      <img src="Cert2.jpeg" alt="Certificate 2" />
       <a href="https://coursera.org/share/fd6c06675c479d487d65f45c3efd4985">
         <h3>Javascript</h3>
       </a>
     </div>
     <div class="certificate">
-      <img src="Cert3.jpeg" class="d-block w-100" alt="Certificate 3" />
+      <img src="Cert3.jpeg" alt="Certificate 3" />
       <a href="https://coursera.org/share/802a902dca37cb8b1626cfe79c170f23">
         <h3>Advanced React</h3>
       </a>
     </div>
     <div class="certificate">
-      <img src="Cert5.jpeg" class="d-block w-100" alt="Certificate 4" />
+      <img src="Cert5.jpeg" alt="Certificate 4" />
       <a href="https://coursera.org/share/dc1f5c6e07039c90bb13606ce929b47c">
         <h3>UX/UI Principles</h3>
       </a>
     </div>
     <div class="certificate">
-      <img src="Cert4.jpeg" class="d-block w-100" alt="Certificate 5" />
+      <img src="Cert4.jpeg" alt="Certificate 5" />
       <a href="https://coursera.org/share/1eb64773582830143f4747c30bcccd4d">
         <h3>Version Control</h3>
       </a>
@@ -87,5 +87,3 @@
   </footer>
 </body>
 </html>
-
-
