--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Portfolio</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" />
-  <link rel="stylesheet" href="Jalil.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <header>
@@ -21,7 +21,7 @@
   <div class="hero">
     <div class="hero-content">
       <h1>Abdul-Jalil Agouda</h1>
-      <img src="Jelil.jpg" alt="Picture of Me!" class="profile-pic" width="200">
+      <img src="images/Jelil.jpg" alt="Picture of Me!" class="profile-pic" width="200">
       <p>Take a look at my latest projects!</p>
     </div>
   </div>
