--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="hero">
     <div class="hero-content">
       <h1>Abdul-Jalil Agouda</h1>
-      <img src="images/Jelil.jpg" alt="Picture of Me!" class="profile-pic" width="200">
+      <img src="Jelil.jpg" alt="Picture of Me!" class="profile-pic" width="200">
       <p>Take a look at my latest projects!</p>
     </div>
   </div>
